--- a/src/style/playingCard.css
+++ b/src/style/playingCard.css
@@ -7,6 +7,10 @@
     text-align: center !important; 
 }
 
+.cardActionArea{
+
+    height: 60%;
+}
 .imgBack{
     height:100%;
     margin-left: 5px;
@@ -25,6 +29,7 @@
     padding :0px !important;
     display: flex;
     flex-direction:column ;
+    height: auto !important;
 }
 
 .charac{
